Fix banner scaling issue on mobile

--- a/style.css
+++ b/style.css
@@ -672,7 +672,7 @@ article.hentry,
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
-	
+	background-size: cover;
 }
 
 .site-branding {
